# fastapi_tutorial

./: .travis.yml  Pipfile  README.md  pyproject.toml  requirements.txt  test_gerenciador.py
gerenciador_tarefas/: gerenciador.py
