[tool.poetry]
name = "fastapi_tutorial"
version = "0.1.0"
description = ""
authors = ["chipytux"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
